<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Media Provider Manager</string>
    <string name="description">An Xposed module intended to prevent media storage abuse.</string>

    <!-- Drawer -->
    <string name="start_destination_key" translatable="false">start_destination</string>
    <string name="module">Module</string>
    <string name="app_management">App Management</string>
    <string name="usage_record">Usage Record</string>
    <string name="settings">Settings</string>
    <string name="media_store">Media Store</string>
    <string name="audio">Audio</string>
    <string name="downloads">Downloads</string>
    <string name="files">Files</string>
    <string name="images">Images</string>
    <string name="video">Video</string>
    <string name="playground">Playground</string>
    <string name="about">About</string>

    <!-- Module -->
    <string name="guide_active">Activate the module in the Xposed framework and restart the system to use this feature.</string>
    <string name="not_active">NOT ACTIVE</string>
    <string name="restart_system">Restart the system to upgrade the module</string>
    <string name="active">ACTIVATED</string>
    <string name="enabled_rule_count">%d rule(s) enabled</string>
    <string name="query_times">Queried %d times</string>
    <string name="insert_times">Inserted %d times</string>
    <string name="delete_times">Deleted %d times</string>
    <string name="delimiter">,\ </string>
    <string name="app_info">App info</string>
    <string name="queried_at">Queried at\ </string>
    <string name="inserted_at">Inserted at\ </string>
    <string name="deleted_at">Deleted at\ </string>
    <string name="and_more"> and %d more</string>
    <string name="copied">Copied: %s</string>
    <string name="add_to_existing_template_title">Add to existing template: %s</string>
    <string name="remove_from_template">Remove this app from the template</string>

    <!-- Menu -->
    <string name="search">Search</string>
    <string name="view">View</string>
    <string name="sort_key" translatable="false">sort</string>
    <string name="sort_title">Sort by</string>
    <string name="menu_sort_by_app_name_title">App name</string>
    <string name="menu_sort_by_update_time_title">Update time</string>
    <string name="menu_rule_count_key" translatable="false">rule_count</string>
    <string name="menu_rule_count">Rule count</string>
    <string name="menu_hide_title">Hide</string>
    <string name="menu_hide_system_app_key" translatable="false">hide_system_app</string>
    <string name="menu_hide_system_app_title">System apps</string>
    <string name="delete">Delete</string>
    <string name="pick_date_title">Pick a date</string>
    <string name="menu_hide_query_key" translatable="false">hide_query</string>
    <string name="menu_hide_query_title">Query records</string>
    <string name="menu_hide_insert_key" translatable="false">hide_insert</string>
    <string name="menu_hide_insert_title">Insert records</string>
    <string name="menu_hide_delete_key" translatable="false">hide_delete</string>
    <string name="menu_hide_delete_title">Delete records</string>
    <string name="menu_clear">Clear all records</string>
    <string name="refresh">Refresh</string>
    <string name="menu_show_all_key" translatable="false">show_all</string>
    <string name="menu_show_all_title">Show other apps\' media files</string>
    <string name="share">Share</string>
    <string name="screen_rotation">Screen rotation</string>
    <string name="info">Info</string>
    <string name="info_item">%s: %s</string>
    <string name="resolution">Resolution</string>
    <string name="sort_media_key" translatable="false">sort_media</string>
    <string name="menu_sort_by_path_title">Path</string>
    <string name="menu_sort_by_date_taken_title">Date taken</string>
    <string name="menu_sort_by_size_title">Size</string>
    <string name="scan_external_storage">Scan all files in external storage</string>
    <string name="validation">Delete all invalid files</string>
    <string name="span_count_key" translatable="false">span_count</string>
    <string name="playback_speed_key" translatable="false">playback_speed</string>

    <!-- Settings -->
    <string name="global_header">GLOBAL</string>
    <string name="reject_nonstandard_dir_key" translatable="false">reject_nonstandard_dir</string>
    <string name="reject_nonstandard_dir_title">Reject creating non-standard directory</string>
    <string name="reject_nonstandard_dir_summary">System apps in AOSP never create non-standard directories, but some manufacturers changed this behavior.</string>
    <string name="usage_record_key" translatable="false">usage_record</string>
    <string name="usage_record_title" translatable="false">@string/usage_record</string>
    <string name="usage_record_summary">Save usage records to the database. No new data will appear in the usage record page if you turned off.</string>
    <string name="bpf_hook_key" translatable="false">bpf_hook</string>
    <string name="bpf_hook_title">Allow apps to access private directories through FUSE.</string>
    <string name="scoped_header">SCOPED</string>
    <string name="template_management_key" translatable="false">template_management</string>
    <string name="template_management_title">Template management</string>
    <string name="applied_app_count">Applied to %d app(s)</string>
    <string name="create_template_title">Create template</string>
    <string name="edit_template_title">Edit template</string>
    <string name="template_name_key" translatable="false">template_name</string>
    <string name="template_name_title">Template name</string>
    <string name="template_name_not_unique">The template name is not unique.</string>
    <string name="hook_operation_key" translatable="false">hook_operation</string>
    <string name="hook_operation_title">Hook operation</string>
    <string name="hook_operation_query" translatable="false">query</string>
    <string name="hook_operation_insert" translatable="false">insert</string>
    <string name="apply_to_app_key" translatable="false">apply_to_app</string>
    <string name="apply_to_app_title">Apply to app</string>
    <string name="permitted_media_types_key" translatable="false">permitted_media_types</string>
    <string name="permitted_media_types_title">Permitted media types</string>
    <string name="media_type_playlist" translatable="false">4</string>
    <string name="media_type_subtitle" translatable="false">5</string>
    <string name="media_type_audio" translatable="false">2</string>
    <string name="media_type_video" translatable="false">3</string>
    <string name="media_type_image" translatable="false">1</string>
    <string name="media_type_document" translatable="false">6</string>
    <string name="media_type_none" translatable="false">0</string>
    <string name="filter_path_key" translatable="false">filter_path</string>
    <string name="filter_path_title">Filter path</string>
    <string name="add_path">Add a path</string>
    <string name="save">Save</string>
    <string name="quit_without_save">Changes aren\'t saved yet, are you sure you want to quit?</string>

    <!-- Media Store -->
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="rationale_shouldShowRationale">App needs read external storage permission to visit media files created by other apps.</string>
    <string name="rationale_permanentlyDenied">App needs read external storage permission to visit media files created by other apps.
        Please grant the permission in app info manually.</string>
    <string name="revoke_self_permission">App needs read external storage permission to be revoked for showing media files only created by itself.
        Please revoke the permission in app info manually.</string>
    <string name="unsupported_delete_in_bulk">Delete in bulk through the media store is not possible on Android Q.</string>

    <!-- Playground -->
    <string name="playground_header">Here are some experiments on media storage,
        through which you can learn about media storage and test module functions.</string>
    <string name="no_wifi">No wifi transport yet. Would you like to start the experiment which will consume your data?</string>
    <string name="start">START</string>

    <string name="playground_title_insert">Insert</string>
    <string name="unsplash_download_manager_title">Get 10 random pictures from Unsplash through the download manager</string>
    <string name="unsplash_download_manager_summary">Downloading files through the download manager does not require storage permissions,
        and the downloaded files are attributed to the requesting app,
        which means the app can access the files without storage permissions.\nYou can revoke the storage permission of this app,
        click Start, then switch to the Images page and uncheck the checkbox in the more options to see if you can see the downloaded image.</string>
    <string name="unsplash_insert_title">Insert 10 random pictures from Unsplash through the media store</string>
    <string name="unsplash_insert_summary">It is similar to using the download manager.
        The main distinction is that the contributor of the images is different,
        which can be seen in the usage record.</string>

    <string name="playground_title_intercept">Intercept</string>
    <string name="intercept_insert_title">Intercept insert</string>
    <string name="intercept_insert_summary">First write the interception rule. Find this application in the App Management page,
        click Create template, remove Query from Hook operation, and remove Image from Permitted media types.
        Click Start can add this rule directly.\nThen click Start of experiment 2 and switch to the Images page to see if you can see the image.
        Finally open Pictures/MPM/ with a file manager to see if you can see the image.</string>
    <string name="intercept_download_manager_title">Intercept download manager</string>
    <string name="intercept_download_manager_summary">Sometimes apps save the file first and then notify the media store.
        In this case, we can only intercept the recording of the media file by the media store,
        but not the saving of the file. \nFirst write interception rule.
        The rule is almost the same as the one in the previous experiment,
        except that Apply to app is changed to Downloads and Media Storage.
        Click Start can add this rule directly.\nThen click Start of experiment 1 and switch to the Images page to see if you can see the image.
        Finally open Pictures/MPM/ with a file manager to see if you can see the image.</string>
    <string name="intercept_query_title">Intercept query</string>
    <string name="intercept_query_summary">First write the interception rule. Find this application in the App Management page,
        click Create template, remove Insert from Hook operation, and remove Image from Permitted media types.
        Click Start can add this rule directly.\nThen switch to the Images page and the Files page to see if you can see the image.</string>

    <!--    <string name="playground_title_do_it_yourself">Do It Yourself</string>-->
    <!--    <string name="do_it_yourself_title"></string>-->
    <!--    <string name="do_it_yourself_summary"></string>-->
</resources>
