<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2021 Green Mushroom
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:iconSpaceReserved="false"
        app:key="@string/template_name_key"
        app:title="@string/template_name_title"
        app:useSimpleSummaryProvider="true" />

    <MultiSelectListPreference
        app:iconSpaceReserved="false"
        app:key="@string/hook_operation_key"
        app:title="@string/hook_operation_title"
        app:useSimpleSummaryProvider="true" />

    <MultiSelectListPreference
        app:dependency="@string/hook_operation_key"
        app:iconSpaceReserved="false"
        app:key="@string/apply_to_app_key"
        app:title="@string/apply_to_app_title"
        app:useSimpleSummaryProvider="true" />

    <MultiSelectListPreference
        app:dependency="@string/hook_operation_key"
        app:entries="@array/media_types_title"
        app:iconSpaceReserved="false"
        app:key="@string/permitted_media_types_key"
        app:title="@string/permitted_media_types_title"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        app:dependency="@string/hook_operation_key"
        app:iconSpaceReserved="false"
        app:key="@string/filter_path_key"
        app:title="@string/filter_path_title"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>
