<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_search"
        android:actionViewClass="androidx.appcompat.widget.SearchView"
        android:icon="@drawable/ic_outline_search_24"
        android:showAsAction="always|collapseActionView"
        android:title="@string/search"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/menu_view"
        android:icon="@drawable/ic_outline_tune_24"
        android:showAsAction="always"
        android:title="@string/view">
        <menu>
            <item
                android:id="@+id/menu_header_sort"
                android:showAsAction="never"
                android:title="@string/sort_title" />
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_sort_by_name"
                    android:title="@string/menu_sort_by_name_title" />
                <item
                    android:id="@+id/menu_sort_by_update_time"
                    android:title="@string/menu_sort_by_update_time_title" />
                <item
                    android:id="@+id/menu_rule_count"
                    android:checkable="true"
                    android:showAsAction="never"
                    android:title="@string/menu_rule_count" />
            </group>
            <item
                android:id="@+id/menu_header_hide"
                android:showAsAction="never"
                android:title="@string/menu_hide_title" />
            <item
                android:id="@+id/menu_hide_system_app"
                android:checkable="true"
                android:showAsAction="never"
                android:title="@string/menu_hide_system_app_title" />
        </menu>
    </item>
</menu>
