<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2021 Green Mushroom
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:startDestination="@id/about_fragment">

    <!-- Module -->
    <fragment
        android:id="@+id/applist_fragment"
        android:name="me.gm.cleaner.plugin.ui.module.appmanagement.AppListFragment"
        android:label="@string/app_management">
        <action
            android:id="@+id/action_applist_to_app"
            app:destination="@id/app_fragment" />
    </fragment>
    <fragment
        android:id="@+id/app_fragment"
        android:name="me.gm.cleaner.plugin.ui.module.appmanagement.AppFragment"
        android:label="@string/app_management">
        <action
            android:id="@+id/action_app_to_create_template"
            app:destination="@id/create_template_fragment" />
        <argument
            android:name="packageInfo"
            app:argType="android.content.pm.PackageInfo" />
        <argument
            android:name="label"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/usage_record_fragment"
        android:name="me.gm.cleaner.plugin.ui.module.usagerecord.UsageRecordFragment"
        android:label="@string/usage_record" />

    <fragment
        android:id="@+id/settings_fragment"
        android:name="me.gm.cleaner.plugin.ui.module.settings.SettingsFragmentStub"
        android:label="@string/settings">
        <action
            android:id="@+id/action_settings_to_templates"
            app:destination="@id/templates_fragment" />
    </fragment>
    <fragment
        android:id="@+id/templates_fragment"
        android:name="me.gm.cleaner.plugin.ui.module.settings.TemplatesFragment"
        android:label="@string/template_management_title">
        <action
            android:id="@+id/action_templates_to_create_template"
            app:destination="@id/create_template_fragment" />
    </fragment>

    <fragment
        android:id="@+id/create_template_fragment"
        android:name="me.gm.cleaner.plugin.ui.module.settings.CreateTemplateFragment"
        android:label="@string/create_template_title">
        <argument
            android:name="templateName"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="hookOperation"
            android:defaultValue="@null"
            app:argType="string[]"
            app:nullable="true" />
        <argument
            android:name="packageNames"
            android:defaultValue="@null"
            app:argType="string[]"
            app:nullable="true" />
        <argument
            android:name="permittedMediaTypes"
            android:defaultValue="@null"
            app:argType="string[]"
            app:nullable="true" />
    </fragment>

    <!-- Media Store -->
    <fragment
        android:id="@+id/audio_fragment"
        android:name="me.gm.cleaner.plugin.ui.mediastore.audio.AudioFragment"
        android:label="@string/audio" />

    <fragment
        android:id="@+id/downloads_fragment"
        android:name="me.gm.cleaner.plugin.ui.mediastore.downloads.DownloadsFragment"
        android:label="@string/downloads" />

    <fragment
        android:id="@+id/files_fragment"
        android:name="me.gm.cleaner.plugin.ui.mediastore.files.FilesFragment"
        android:label="@string/files" />

    <fragment
        android:id="@+id/images_fragment"
        android:name="me.gm.cleaner.plugin.ui.mediastore.images.ImagesFragment"
        android:label="@string/images">
        <action
            android:id="@+id/action_images_to_image_pager"
            app:destination="@id/image_pager_fragment" />
    </fragment>
    <fragment
        android:id="@+id/image_pager_fragment"
        android:name="me.gm.cleaner.plugin.ui.mediastore.imagepager.ImagePagerFragment">
        <argument
            android:name="initialPosition"
            android:defaultValue="0"
            app:argType="integer" />
        <argument
            android:name="uri"
            android:defaultValue="@null"
            app:argType="android.net.Uri"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/video_fragment"
        android:name="me.gm.cleaner.plugin.ui.mediastore.video.VideoFragment"
        android:label="@string/video">
        <action
            android:id="@+id/action_video_to_video_player"
            app:destination="@id/video_player_fragment" />
    </fragment>
    <fragment
        android:id="@+id/video_player_fragment"
        android:name="me.gm.cleaner.plugin.ui.mediastore.video.VideoPlayerFragment">
        <argument
            android:name="initialPosition"
            android:defaultValue="0"
            app:argType="integer" />
        <argument
            android:name="uris"
            app:argType="android.net.Uri[]" />
    </fragment>

    <!-- Playground & About -->
    <fragment
        android:id="@+id/playground_fragment"
        android:name="me.gm.cleaner.plugin.ui.drawer.playground.PlaygroundFragment"
        android:label="@string/playground">
        <action
            android:id="@+id/action_playground_to_create_template"
            app:destination="@id/create_template_fragment" />
    </fragment>

    <fragment
        android:id="@+id/about_fragment"
        android:name="me.gm.cleaner.plugin.ui.drawer.about.AboutFragment"
        android:label="@string/about" />
</navigation>
